examples/pass/fueraMain3.c
int x = 3;
print("no deberia imprimir esto, fueraMain3 %i: ", x);
int main(){
   
   return 0;
}