examples/error/errorMain3.c
int main(){}
    printf("no deberia imprimir esto, errorMain3");
}
